<resources>
    <string name="app_name">PreWeather</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="settings">Settings</string>
    <string name="location">Location</string>
    <string name="TemperatureUnits">Units System</string>
    <string name="weatherNotification">Weather Notification</string>
    <string name="KEY_SETTING_LOCATION">KEY_SETTING_LOCATION</string>
    <string name="KEY_SETTING_TEMPERATUREUNITS">KEY_SETTING_TEMPERATUREUNITS</string>
    <string name="KEY_SETTING_WEATHERNOTIFICATION">KEY_SETTING_WEATHERNOTIFICATION</string>
    <string name="metric_celsius_scale">°</string>
    <string name="british_fahrenheit_scale">°F</string>
    <string name="metric_speed">km/h</string>
    <string name="british_speed">mile/h</string>
    <string name="menu_icon_title_share">Share</string>
    <string name="share_format">Hi!on %1$s,the weather will be %2$s,the highest temperature will reach %3$s while the lowest %4$s.The humidity will be %5$s.The air pressure is %6$s,and the wind direction is %7$s.Have a nice day!</string>
    <string name="share_subject">WeatherForecast Sharing</string>
    <string name="share_weather_via">Share weather forecast via</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="notification_title">Today\'s Weather. </string>
    <string name="notification_detail">Today\'s weather has been updated!Check out what clothes should you wear!</string>
    <string name="detail">Detail</string>
    <string name="current_latitude">KEY_CURRENT_LATITUDE</string>
    <string name="current_longitude">KEY_CURRENT_LONGITUDE</string>
    <string name="current_province">KEY_CURRENT_PROVINCE</string>
    <string name="current_city_code">KEY_CURRENT_CITYCODE</string>
    <string name="current_city">KEY_CURRENT_CITY</string>

</resources>
