<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:key="@string/KEY_SETTING_LOCATION"
        android:title="@string/location"
        android:summary="长沙"
        android:defaultValue="长沙"
        android:inputType="textPostalAddress"
        ></EditTextPreference>
    <SwitchPreferenceCompat
        android:key="@string/KEY_SETTING_TEMPERATUREUNITS"
        android:title="@string/TemperatureUnits"
        android:summary="Metric"
        android:defaultValue="false"
        ></SwitchPreferenceCompat>
    <SwitchPreferenceCompat
        android:key="@string/KEY_SETTING_WEATHERNOTIFICATION"
        android:title="@string/weatherNotification"
        android:defaultValue="false"
        ></SwitchPreferenceCompat>

</PreferenceScreen>